# excel-tools

./: InputData.py  Interface.py  README.md  config.json  excception.txt  exception_logger.py  first_test.xlsx  helper.py  index.py  pyinstaller.py  pyproject.toml  sample.py  setup.py  test.py  test.xlsx  test1.txt  test2.txt  xlsxHelper.py  xlsxhandler.py
test/: freeze_both.xlsx  freeze_column.xlsx  freeze_row.xlsx  ~$freeze_both.xlsx
test_freeze/: free_all.xlsx  free_column.xlsx  free_row.xlsx  no_free.xlsx
test_freeze/free_all/: free_all.xlsx
test_freeze/free_column/: free_column.xlsx
test_freeze/free_row/: free_row.xlsx
test_freeze/no_free/: no_free.xlsx
